# StockMomentumAndVolatilityPredictor

./: CMakeLists.txt  PROPOSAL.md  README.md  abengoa.csv  acciona.csv  stock_data.csv
apps/: cinder_app_main.cc  train_model_main.cc
apps/data/: momentumtrainingdata.txt  volatilitytrainingdata.txt
include/core/: data_processor.h  date.h
include/core/momentum-prediction/: momentum_calculator.h  momentum_classifier.h  momentum_model.h  momentum_training_data_factory.h
include/core/volatility-prediction/: volatility_calculator.h  volatility_classifier.h  volatility_model.h  volatility_training_data_factory.h
include/visualizer/: automated_finadvisor_app.h  candlestick_chart_visualizer.h  technical_chart_visualizer.h
src/core/: data_processor.cc  date.cc
src/core/momentum-prediction/: momentum_calculator.cc  momentum_classifier.cc  momentum_model.cc  momentum_training_data_factory.cc
src/core/volatility-prediction/: volatility_calculator.cc  volatility_classifier.cc  volatility_model.cc  volatility_training_data_factory.cc
src/visualizer/: automated_finadvisor_app.cc  candlestick_chart_visualizer.cc  technical_chart_visualizer.cc
tests/: test_data_processor.cc  test_momentum_calculator.cc  test_momentum_classifier.cc  test_momentum_model.cc  test_momentum_training_data_factory.cc  test_volatility_calculator.cc  test_volatility_classifier.cc  test_volatility_model.cc  test_volatility_training_data_factory.cc
training-data/: acerinox.csv  acs.csv  atresmedia.csv  banco-sabadell.csv  bankinter.csv  bbva.csv  bme.csv  caixabank.csv  colonial.csv  enags.csv  fcc.csv  ferrovial.csv  grifols.csv  iberdrola.csv  inditex.csv  indra.csv  mapfre.csv  mediaset.csv
